@@ -1,3 +1,9 @@
+2000-07-10  Michael Meeks  <michael@helixcode.com>
+
+	* component.c (component_del): unref the client site too.
+
+	* container.c (sample_app_create): bump init size.
+
 2000-07-06  Michael Meeks  <michael@helixcode.com>
 
 	* container-io.c (save_component): unref the sub directory.
